--- a/index.html
+++ b/index.html
@@ -11,27 +11,18 @@
 <h1 style="text-align:center;">به نام خدا</h1>
 <pre style="text-align:center;">
 انگیزه نامه
-ملیکا زمان زاده
-متولد 76/06/17
+حدیثه گوهری نیا
+
 </pre>
 
 <hr>
 
 <h2 style="text-align:center;">اهداف و انگیزه</h2>
-<p style="text-align:center;"> علاقه مند به یادگیری در زمینه ی کامپیوتر و برنامه نویسی هستم 
+<p style="text-align:center;"> علاقه مند به یادگیری در مورد کامپیوتر و نرم افزار های آن هستم و قصد پیشرفت در این رشته را دارم
 
 <hr>
 
-<h3 style="text-align:center;">تجربه های گذشته</h3>
-<p style="text-align:center;"> در حد مبتدی آشنایی دارم c++,c , html ,VHDL,SQL  : برنامه نویسی به زبان های  <p>
 
-<hr>
-
-<h4 style="text-align:center;">برنامه</h4>
-  <pre style="text-align:center;"> . علت تحصیل بنده در دانشگاه پیام نور رعایت سیستم آموزشی بین المللی و سطح بالای آن نسبت به سایر دانشگاه های هم رده است  
-  . هدف من برای آینده ادامه دادن رشته ی تحصیلی و پیشرفت در این زمینه است  </pre>
-
-<hr>
 
 
 * با تشکر از استاد عزیز گرانقدر جناب آقای سید علی رضوی ابراهیمی *
